@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-04-14T22:26:43Z",
+  "count" : 43,
+  "count_minmax" : [ 43, 43 ],
+  "count_decinc" : [ -0, +43 ],
+  "uniques" : 32,
+  "uniques_minmax" : [ 32, 32 ],
+  "uniques_decinc" : [ -0, +32 ]
+}
