@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-04-14T22:26:43Z",
+  "count" : 39,
+  "count_minmax" : [ 39, 39 ],
+  "count_decinc" : [ -0, +39 ],
+  "uniques" : 24,
+  "uniques_minmax" : [ 24, 24 ],
+  "uniques_decinc" : [ -0, +24 ]
+}
