@@ -1,0 +1,9 @@
+{
+  "timestamp" : "2024-04-14T22:26:43Z",
+  "count" : 76,
+  "count_minmax" : [ 76, 76 ],
+  "count_decinc" : [ -0, +76 ],
+  "uniques" : 51,
+  "uniques_minmax" : [ 51, 51 ],
+  "uniques_decinc" : [ -0, +51 ]
+}
