@@ -1,144 +1,90 @@
 {
-  "timestamp" : "2024-03-07T08:15:58Z",
-  "count_outdated" : 7069,
-  "uniques_outdated" : 2902,
-  "count" : 7240,
-  "uniques" : 3024,
+  "timestamp" : "2024-04-14T22:26:43Z",
+  "count_outdated" : 7240,
+  "uniques_outdated" : 3024,
+  "count" : 7422,
+  "uniques" : 3147,
   "clones" : [
     {
-      "timestamp": "2024-02-22T00:00:00Z",
+      "timestamp": "2024-04-02T00:00:00Z",
       "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-02-23T00:00:00Z",
-      "count": 25,
-      "count_minmax": [ 1, 25 ],
-      "count_decinc": [ 0, 25 ],
-      "uniques": 17,
-      "uniques_minmax": [ 1, 17 ],
-      "uniques_decinc": [ 0, 17 ]
+      "timestamp": "2024-04-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-02-24T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2024-04-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-02-25T00:00:00Z",
-      "count": 20,
-      "count_minmax": [ 1, 20 ],
-      "count_decinc": [ 0, 20 ],
-      "uniques": 15,
-      "uniques_minmax": [ 1, 15 ],
-      "uniques_decinc": [ 0, 15 ]
-    },
-    {
-      "timestamp": "2024-02-26T00:00:00Z",
+      "timestamp": "2024-04-09T00:00:00Z",
       "count": 12,
-      "count_minmax": [ 1, 12 ],
+      "count_minmax": [ 12, 12 ],
       "count_decinc": [ 0, 12 ],
-      "uniques": 11,
-      "uniques_minmax": [ 1, 11 ],
-      "uniques_decinc": [ 0, 11 ]
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     },
     {
-      "timestamp": "2024-02-27T00:00:00Z",
-      "count": 15,
-      "count_minmax": [ 1, 15 ],
-      "count_decinc": [ 0, 15 ],
-      "uniques": 5,
-      "uniques_minmax": [ 1, 5 ],
-      "uniques_decinc": [ 0, 5 ]
+      "timestamp": "2024-04-10T00:00:00Z",
+      "count": 8,
+      "count_minmax": [ 8, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     },
     {
-      "timestamp": "2024-02-28T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 1, 13 ],
-      "count_decinc": [ 0, 13 ],
-      "uniques": 11,
-      "uniques_minmax": [ 1, 11 ],
-      "uniques_decinc": [ 0, 11 ]
+      "timestamp": "2024-04-11T00:00:00Z",
+      "count": 43,
+      "count_minmax": [ 43, 43 ],
+      "count_decinc": [ 0, 43 ],
+      "uniques": 32,
+      "uniques_minmax": [ 32, 32 ],
+      "uniques_decinc": [ 0, 32 ]
     },
     {
-      "timestamp": "2024-02-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2024-04-12T00:00:00Z",
+      "count": 39,
+      "count_minmax": [ 39, 39 ],
+      "count_decinc": [ 0, 39 ],
+      "uniques": 24,
+      "uniques_minmax": [ 24, 24 ],
+      "uniques_decinc": [ 0, 24 ]
     },
     {
-      "timestamp": "2024-03-01T00:00:00Z",
-      "count": 33,
-      "count_minmax": [ 1, 33 ],
-      "count_decinc": [ 0, 33 ],
-      "uniques": 23,
-      "uniques_minmax": [ 1, 23 ],
-      "uniques_decinc": [ 0, 23 ]
-    },
-    {
-      "timestamp": "2024-03-02T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "timestamp": "2024-04-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
     },
     {
-      "timestamp": "2024-03-03T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 4, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 4,
-      "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
-    {
-      "timestamp": "2024-03-04T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 0, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
-    {
-      "timestamp": "2024-03-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
-      "timestamp": "2024-03-06T00:00:00Z",
-      "count": 17,
-      "count_minmax": [ 1, 17 ],
-      "count_decinc": [ 0, 17 ],
-      "uniques": 14,
-      "uniques_minmax": [ 1, 14 ],
-      "uniques_decinc": [ 0, 14 ]
-    },
-    {
-      "timestamp": "2024-03-07T00:00:00Z",
-      "count": 13,
-      "count_minmax": [ 13, 13 ],
-      "count_decinc": [ 0, 13 ],
-      "uniques": 12,
-      "uniques_minmax": [ 12, 12 ],
-      "uniques_decinc": [ 0, 12 ]
+      "timestamp": "2024-04-14T00:00:00Z",
+      "count": 76,
+      "count_minmax": [ 76, 76 ],
+      "count_decinc": [ 0, 76 ],
+      "uniques": 51,
+      "uniques_minmax": [ 51, 51 ],
+      "uniques_decinc": [ 0, 51 ]
     }
   ]
 }
